2012-04-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (get_trash): Correct odds and evens.

2012-04-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_my_settings): Call OMP GET_SETTINGS.

	* src/html/omp.xsl (get_my_settings): Add Rows Per Page.

2012-04-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Split targets configuration help into three pages.

	* src/html/help.xsl (configure_targets.html): Remove.
	(contents.html): Split targets link into three.
	(new_target.html, target_details.html, targets.html): New templates.
	Bodies from configure_targets.html.

	* src/html/omp.xsl (html-create-target-form, html-targets-table)
	(target [details]): Switch to new target help pages.

2012-04-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_targets_omp): Make max -1 if it fails instead of 10,
	so that it is possible to get all targets.

2012-04-02  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (target [details]): Remove Targets link.  Superseded by
	is a list icon.

2012-04-02  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-targets-table): Add reset button to filtering.

2012-04-02  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-targets-table): Add First field to filtering.

2012-04-02  Matthew Mundell <matthew.mundell@greenbone.net>

	Add new, list and export icons on Target Details page.

	* src/gsad.c (init_validator, exec_omp_get): Add export_target.

	* src/gsad_omp.c (new_target): Add target ID to XML for icon on Target
	Details page.
	(create_target_omp): If target ID present, go to Target Details page.
	(get_target): New function.  Body from get_target_omp.
	(get_target_omp): Pass through to get_target.
	(export_target_omp): New function.

	* src/gsad_omp.h: Add header accordingly.

	* src/html/omp.xsl (html-gsa-logo): Add create_target indicator match for
	Target Details page.